k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cicd-voting
  name: cicd-voting
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: cicd-voting
